--- a/package.json
+++ b/package.json
@@ -7,23 +7,26 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^7.1.0",
-    "@angular/common": "^7.1.0",
-    "@angular/compiler": "^7.1.0",
-    "@angular/core": "^7.1.0",
-    "@angular/forms": "^7.1.0",
-    "@angular/http": "^7.1.0",
-    "@angular/platform-browser": "^7.1.0",
-    "@angular/platform-browser-dynamic": "^7.1.0",
-    "@angular/router": "^7.1.0",
+    "@angular/animations": "^7.1.1",
+    "@angular/common": "^7.1.1",
+    "@angular/compiler": "^7.1.1",
+    "@angular/core": "^7.1.1",
+    "@angular/forms": "^7.1.1",
+    "@angular/http": "^7.1.1",
+    "@angular/platform-browser": "^7.1.1",
+    "@angular/platform-browser-dynamic": "^7.1.1",
+    "@angular/router": "^7.1.1",
     "@types/errorhandler": "*",
     "@types/method-override": "*",
-    "@types/mongodb": "*",
-    "aws-sdk": "^2.363.0",
+    "@types/mongodb": "^3.1.17",
+    "aws-sdk": "^2.372.0",
     "bootstrap": "^4.1.3",
-    "core-js": "^2.5.4",
-    "cron": "*",
+    "core-js": "^2.6.0",
+    "cron": "^1.5.1",
+    "csv-string": "^3.1.5",
     "errorhandler": "*",
+    "event-stream": "^4.0.1",
+    "fingerprintjs2": "^1.8.6",
     "jsonwebtoken": "*",
     "marked": "*",
     "method-override": "*",
@@ -32,12 +35,12 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.10.7",
-    "@angular/cli": "^7.1.0",
-    "@angular/compiler-cli": "^7.1.0",
+    "@angular-devkit/build-angular": "^0.11.2",
+    "@angular/cli": "^7.1.2",
+    "@angular/compiler-cli": "^7.1.1",
     "@angular/platform-server": "^7.0.0",
-    "@types/node": "~8.9.4",
-    "typescript": "~3.1.1"
+    "@types/node": "^10.12.12",
+    "typescript": "^3.1.6"
   },
   "repository": {}
 }
